--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     }
     #count{
       font-weight: 900;
-      font-size: 3rem;
+      font-size: 40vh;
       opacity: 0.4;
       margin: 0rem;
     }
     #line1, #line2{
       text-align: center;
-      font-size: 0.6rem;
+      font-size: 10vh;
       font-weight: 600;
     }
     #line1{
@@ -54,7 +54,7 @@
     }
     #line2{
       font-weight: 800;
-      font-size: 0.7rem;
+      font-size: 10vh;
     }
   </style>
 </head>
