--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       font-variation-settings:"wdth" 100;
     }
     /* *{outline: red 3px solid;} */
+    html{background-color: rgba(255, 255, 255, 0);}
+    body{border-radius: 10vh 10vh;}
     html, body{
-      background-color: #ffbb4d;
       height: 100%;
       max-height: 100%;
       width: 100%;
