--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       font-variation-settings:"wdth" 100;
     }
     /* *{outline: red 3px solid;} */
-    html{background-color: rgba(255, 255, 255, 0);}
+    html{background-color: rgb(255, 255, 255);}
     body{border-radius: 10vh 10vh;}
     html, body{
       height: 100%;
