--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     // is it puppy or kitty
     if(character === "puppy"){
-      document.body.style = `background-color:#38c3ff`
+      document.body.style = `background-color:#38c3ff; flex-direction:row-reverse`
       elImg.src = "./puppy.png" 
       elCount.innerHTML = weeksLeft
       elLineOne.innerHTML = "weeks left to"
