--- a/index.html
+++ b/index.html
@@ -81,23 +81,37 @@
     const urlParams = new URLSearchParams(queryString);
     const character = urlParams.get('character');
     const date = urlParams.get('date');
+    const isWidget = urlParams.get('isWidget');
 
     // calculate days and weeks
     const daysLeft = daysUntilInputDate(date)
     const weeksLeft = daysToWeeks(daysLeft)
 
+    let style;
+
     // is it puppy or kitty
     if(character === "puppy"){
-      document.body.style = `background-color:#38c3ff; flex-direction:row-reverse`
+      style = `background-color:#38c3ff; flex-direction:row-reverse;`
+      document.body.style = style
       elImg.src = "./puppy.png" 
       elCount.innerHTML = weeksLeft
       elLineOne.innerHTML = "weeks left to"
     }else{
-      document.body.style = `background-color:#ffbb4d`
+      style = `background-color:#ffbb4d;`
+      document.body.style = style
       elImg.src = "./puppy.png" 
       elImg.src = "./kitty.png" 
       elCount.innerHTML = daysLeft
       elLineOne.innerHTML = "days left to"
+    }
+
+    // widget
+    if(isWidget === 'true'){
+      style += 'aspect-ratio:4/2; height:auto; width:auto; border-radius:0; width:80%'
+      elCount.style = "font-size: 2rem"
+      elLineOne.style = "font-size: 0.5rem"
+      document.getElementById("line2").style = "font-size: 0.5rem"
+      document.body.style = style
     }
 
     function daysUntilInputDate(inputDate) {
